Feature: Edit & Cancel a reservation
